1991-04-18  dickey@software.org

	* src/dedline.c:
	fixed end-of-buffer code for 'edittext()' (caused spurious
	data overwrites).

	* src/version.h, src/ded.hlp: added ':' command to directory-tree

1991-04-18  ste_cm@software.org

	* src/ded.hlp: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-04-18  dickey@software.org

	* src/ftree.c: added ':' command to simplify jumps to specific point
	,

	* src/ded.hlp: added note about hard-link

	* src/version.h: added "cL" command to create hard links.

	* src/dedmake.c:
	added command "cL" to create hard link (implicitly to the
	current entry).

	* src/ded.c:
	mods to 'dedwait()' and 'dedread()' to debug and guard against
	user-pattern not finding files.

	* src/dedread.c:
	added flag to control whether identical pattern returns
	true or false (so that if nothing is found, we can force
	re-invocation of this procedure).

1991-04-17  dickey@software.org

	* src/dedscan.c: modified debug-trace to make it easier to watch

	* src/dedwait.c:
	added flag to allow this to be used for debugging (non-curses)

	* src/deddoit.c: modified interface of 'dedwait()'

1991-04-16  dickey@software.org

	* src/version.h: absorb backslash in shell command only when "#" or "%"
	follows (briefer).

	* src/ded.c: suppress empty-strings from argument list

	* src/deddoit.c:
	absorb backslash only when it precedes "#" or "%", to make
	typing commands with backslashes simpler (though inconsistent).
	also, made the static buffers auto (cleaner code).

	* src/version.h:
	modified so that "-" argument causes DED to read a list of
	arguments from stdin (no wildcard expansion!)

	* src/ded.c: interpret "-" argument as read-from-standard-input

1991-04-04  dickey@software.org

	* src/version.h:
	mods to recover/proceed when 'chdir()' works but 'getwd()'
	does not (execute, but no read permission in path).

	* src/ded.c, src/dedscan.c, src/dedring.c:
	guard against 'getwd()' failure.

1991-04-01  dickey@software.org

	* src/version.h: