@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19910418
+MANIFEST for ded, version t19910422
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
